DSND-3300: Format code